Timertask changed to timeline due to bugs in Timertask rexecution